relm4-macros/tests/ui/compile-fail/pre-view-return.stderr
error: unreachable statement
  --> tests/ui/compile-fail/pre-view-return.rs:7:1
   |
7  | #[relm4_macros::component]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
...
19 |         return;
   |         ------ any code following this expression is unreachable
   |
note: the lint level is defined here
  --> tests/ui/compile-fail/pre-view-return.rs:1:9
   |
1  | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `relm4_macros::component` (in Nightly builds, run with -Z macro-backtrace for more info)
